[#21] Fix form elements to have no labels overlapping with content
resolves #21

--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -120,7 +120,7 @@ button[disabled]{
 .radio input[type=radio]:focus + .radio__label:after,
 .checkbox input[type=checkbox]:focus + .checkbox__label:after {
   border-color: $primary;
-  box-shadow: 0 1px 2px 1px $gray5 inset;
+  box-shadow: 0 -1px 0 0 $gray5 inset;
 }
 
 //
@@ -132,6 +132,7 @@ button[disabled]{
 .textfield,
 .select{
   background-color: $white;
+  border: 1px solid $gray3;
   display: block;
   margin-top: -2px;
   margin-bottom: 2.4rem;
@@ -140,24 +141,23 @@ button[disabled]{
 
 .textfield__label,
 .select__label{
-  background-color: $white;
   font-size: $font-size--small;
   position: absolute;
-  left: 1px;
+  left: 0;
   line-height: 1;
   padding: .5rem;
   right: 1px;
-  top: 1px;
+  top: 0;
 }
 
 .textfield input,
 .textfield textarea,
 .select select {
   background-color: transparent;
-  border: 1px solid $gray3;
   border-radius: 2px;
   box-sizing: border-box;
-  padding: 1.8rem .5rem .6rem;
+  margin-top: 1.8rem;
+  padding: 0 .5rem .6rem;
   position: relative;
   width: 100%;
 }
@@ -165,7 +165,7 @@ button[disabled]{
 .textfield *:focus,
 .select select:focus{
   border-color: $primary;
-  box-shadow: 0 1px 2px 0 $gray5 inset;
+  box-shadow: 0 -1px 0 0 $gray5 inset;
   outline: none;
 }
 
